--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,13 +9,31 @@ buildscript {
 
         // We use NDK 23 which has both M1 support and is the side-by-side NDK version from AGP.
         ndkVersion = "23.1.7779620"
+        kotlinVersion = "1.5.31"
+        RNNKotlinVersion = kotlinVersion
     }
     repositories {
         google()
+        jcenter()
+        mavenLocal()
         mavenCentral()
     }
     dependencies {
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion")
         classpath("com.android.tools.build:gradle:7.3.1")
         classpath("com.facebook.react:react-native-gradle-plugin")
     }
+}
+
+allprojects {
+  repositories {
+    google()
+    mavenLocal()
+    mavenCentral()
+    maven {
+      // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
+      url "$rootDir/../node_modules/react-native/android"
+    }
+    maven { url 'https://jitpack.io' }
+  }
 }
